# jailbreak-detector

./: .gitignore  NOTES.md  PRESENTATION.md  README.md  dashboard.html  pyproject.toml  results.json
.github/workflows/: ci.yml
posts/: case-study.md  post-lessons.md  post-quick-win.md  post-technical.md
src/: cli.py  config.json  detector.py  detectors.py  payloads.py  scorer.py
test_corpus/clean/: 01_normal_question.txt  02_code_snippet.txt  03_system_prompt.txt  04_multi_language.txt  05_formatted_data.json  06_long_document.txt  07_technical_query.txt  09_html_page.html  10_documentation.md  11_algorithms.py
test_corpus/injected/: 01_direct_override.txt  02_role_hijacking.txt  03_output_manipulation.txt  04_context_switching.txt  05_encoding_evasion.txt  06_token_smuggling.txt  07_system_prompt_extraction.txt  08_instruction_conflict.txt  09_hypothetical_framing.txt  10_authority_escalation.txt  11_multi_turn_conditioning.txt  12_translation_abuse.txt  13_format_injection.txt  14_payload_splitting.txt  15_obfuscation_layering.txt
tests/: __init__.py  test_detector.py
