[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.backends._legacy:_Backend"

[project]
name = "jailbreak-detector"
version = "0.1.0"
description = "Multi-layer static analysis engine for LLM jailbreak detection"
readme = "README.md"
requires-python = ">=3.11"
license = {text = "MIT"}
keywords = ["security", "llm", "jailbreak", "adversarial", "ai-security"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "Intended Audience :: Information Technology",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3.11",
    "Topic :: Security",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]

[project.urls]
"Source" = "https://github.com/rushaan/jailbreak-detector"
"Documentation" = "https://github.com/rushaan/jailbreak-detector#readme"

[project.scripts]
jailbreak-detector = "detector:main"

[tool.setuptools.packages.find]
where = ["src"]
include = ["src*"]

[tool.setuptools.package-data]
"*" = ["*.json"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "W", "I"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
